k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniproject-ingress
  namespace: miniproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - miniproject.local
      secretName: miniproject-tls-secret
  rules:
    - host: miniproject.local
      http:
        paths:
          - path: /api/v1/user-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /api/v1/feed-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: feed-service
                port:
                  number: 3002
          - path: /api/v1/job-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: job-service
                port:
                  number: 3003
          - path: /api/v1/event-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-service
                port:
                  number: 3004
          - path: /api/v1/messaging-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: messaging-service
                port:
                  number: 3005
          - path: /api/v1/notification-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 3006
          - path: /api/v1/research-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: research-service
                port:
                  number: 3007
          - path: /api/v1/analytics-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 3008
